refactor: remove unused test files and mocks
- Deleted validation middleware tests, hash, jwt, and prisma mocks.
- Removed category and user service tests to streamline the test suite.
- Eliminated load test helpers and performance monitor utilities.
- Updated tsconfig to enable strict type checking for better code quality.

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,53 @@
-# Copy this file to .env and fill in your actual values
-# DATABASE_URL=postgresql://user:password@host:port/database?sslmode=require
-JWT_SECRET=your_jwt_secret_here
-DATABASE_URL=postgresql://user:password@host:port/database?sslmode=require&channel_binding=require
-
-DATABASE_URL_LOCAL=postgresql://postgres:password@localhost:5432/zia?schema=public
-DATABASE_URL_SUPERBASE=postgresql://postgres:password@host:port/postgres
-
-# AWS S3 Configuration
-AWS_ACCESS_KEY_ID=your_aws_access_key_id
-AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
-AWS_REGION=eu-north-1
-AWS_S3_BUCKET_NAME=your_bucket_name
-
+# Application Configuration
+NODE_ENV=development
 PORT=3000
 
-# Frontend URL for WebSocket CORS
+# Database
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/backend
+
+# JWT Authentication
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRES_IN=24h
+
+# Stripe Payment Gateway
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+
+# AWS S3 Configuration (for file uploads)
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+AWS_S3_BUCKET_NAME=your-s3-bucket-name
+
+# AWS SES Configuration (for email service)
+AWS_SES_REGION=us-east-1
+AWS_SES_FROM_EMAIL=noreply@yourdomain.com
+
+# Google Maps API (for location services)
+GOOGLE_MAPS_API_KEY=your-google-maps-api-key
+
+# Gemini AI Configuration (for embeddings)
+GEMINI_API_KEY=your-gemini-api-key
+EMBEDDING_API_URL=https://generativelanguage.googleapis.com/v1beta/models
+EMBEDDING_MODEL=text-embedding-004
+
+# RabbitMQ Configuration (for message queue)
+RABBITMQ_URL=amqp://localhost:5672
+
+# Frontend URL (for CORS and redirects)
 FRONTEND_URL=http://localhost:5173
 
-# Email SMTP Configuration
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
-MAIL_USER=your_email@example.com
-MAIL_PASS=your_email_password
-MAIL_FROM='"Zia" <no-reply@Zia.com>'
+# Optional: Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
 
-RABBITMQ_URL=amqps://user:password@host/vhost
+# Optional: Redis (if using for caching/sessions)
+# REDIS_URL=redis://localhost:6379
+
+# Optional: Logging
+# LOG_LEVEL=info
+
+# Optional: API Keys for other services
+# TWILIO_ACCOUNT_SID=your-twilio-account-sid
+# TWILIO_AUTH_TOKEN=your-twilio-auth-token
+# SENDGRID_API_KEY=your-sendgrid-api-key
