--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "declaration": true,
     "declarationMap": true,
     
-    "strict": false,
+    "strict": true,
     "skipLibCheck": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": false,
