--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "node dist/index.js",
     "dev": "nodemon --exec \"tsx\" index.ts",
     "seed": "tsx prisma/seed.ts",
-    "pm2:start": "npm run build && pm2 start ecosystem.config.cjs",
+    "pm2:start": "npm run build && pm2 start ecosystem.config.cjs --only backend",
+    "pm2:start:dev": "pm2 start ecosystem.config.cjs --only backend-dev",
     "pm2:stop": "pm2 stop ecosystem.config.cjs",
+    "pm2:stop:dev": "pm2 stop backend-dev",
     "pm2:restart": "pm2 restart ecosystem.config.cjs",
+    "pm2:restart:dev": "pm2 restart backend-dev",
     "pm2:logs": "pm2 logs backend",
+    "pm2:logs:dev": "pm2 logs backend-dev",
     "pm2:monit": "pm2 monit"
   },
   "repository": {
