--- a/package.json
+++ b/package.json
@@ -8,14 +8,29 @@
     "start": "node dist/index.js",
     "dev": "nodemon --exec \"tsx\" index.ts",
     "seed": "tsx prisma/seed.ts",
-    "pm2:start": "npm run build && pm2 start ecosystem.config.cjs --only backend",
-    "pm2:start:dev": "pm2 start ecosystem.config.cjs --only backend-dev",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:admin": "jest --testPathPattern=Admin",
+    "test:admin:watch": "jest --testPathPattern=Admin --watch",
+    "test:integration": "jest --config jest.integration.config.cjs",
+    "test:integration:watch": "jest --config jest.integration.config.cjs --watch",
+    "test:api": "jest --testPathPatterns=integration/api",
+    "test:perf": "jest --testPathPatterns=integration/performance",
+    "load:artillery": "artillery run load-tests/artillery/api-load-test.yml",
+    "load:artillery:stress": "artillery run load-tests/artillery/stress-test.yml",
+    "load:artillery:spike": "artillery run load-tests/artillery/spike-test.yml",
+    "load:artillery:report": "artillery run --output report.json load-tests/artillery/api-load-test.yml && artillery report report.json",
+    "load:artillery:user-reg": "artillery run load-tests/artillery/user-registration-test.yml",
+    "load:k6": "k6 run load-tests/k6/load-test.js",
+    "load:k6:stress": "k6 run load-tests/k6/stress-test.js",
+    "load:k6:spike": "k6 run load-tests/k6/spike-test.js",
+    "load:k6:soak": "k6 run load-tests/k6/soak-test.js",
+    "load:k6:user-reg": "k6 run load-tests/k6/user-registration-test.js",
+    "pm2:start": "npm run build && pm2 start ecosystem.config.cjs",
     "pm2:stop": "pm2 stop ecosystem.config.cjs",
-    "pm2:stop:dev": "pm2 stop backend-dev",
     "pm2:restart": "pm2 restart ecosystem.config.cjs",
-    "pm2:restart:dev": "pm2 restart backend-dev",
     "pm2:logs": "pm2 logs backend",
-    "pm2:logs:dev": "pm2 logs backend-dev",
     "pm2:monit": "pm2 monit"
   },
   "repository": {
@@ -31,6 +46,7 @@
     "@aws-sdk/s3-request-presigner": "^3.873.0",
     "@googlemaps/google-maps-services-js": "^3.4.2",
     "@prisma/client": "6.17.0",
+    "@types/node-cron": "^3.0.11",
     "amqplib": "^0.10.9",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -40,6 +56,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "socket.io-client": "^4.8.1",
