--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
+    "postinstall": "prisma generate",
     "start": "node dist/index.js",
     "dev": "nodemon --exec \"tsx\" index.ts",
     "seed": "tsx prisma/seed.ts",
