--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/index.js",
     "dev": "nodemon --exec \"tsx\" index.ts",
     "seed": "tsx prisma/seed.ts"
