--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "stripe": "^19.1.0"
   },
